fix to convert to camel case the models of schemas
