# apps/fhynix-core-apis/src/app/common/models/family-members-model.ts
@@ -1,18 +1,18 @@
 export class FamilyMembersModel {
   id?: string
-  created_at_utc?: Date
-  created_by?: string
-  updated_at_utc?: Date
-  updated_by?: string
-  is_deleted?: boolean
-  user_id: string
-  relationship_id: string
-  first_name: string
-  last_name?: string
+  createdAtUtc?: Date
+  createdBy?: string
+  updatedAtUtc?: Date
+  updatedBy?: string
+  isDeleted?: boolean
+  userId: string
+  relationshipId: string
+  firstName: string
+  lastName?: string
   dob?: Date
-  profile_image?: boolean
+  profileImage?: boolean
   gender?: string
-  other_info?: string
+  otherInfo?: string
   color?: string
   personalities?: string
   interests?: string
